--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "brace": "^0.10.0",
     "marked": "^0.3.6",
     "vue": "^2.3.3"
   },
