--- a/package.json
+++ b/package.json
@@ -6,18 +6,18 @@
     "build": "webpack",
     "postinstall": "npm run build",
     "start:dev": "webpack-dev-server",
-    "start": "static dist --host-address 0.0.0.0 --port 10000"
+    "start": "node md-editor.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "brace": "^0.10.0",
+    "express": "^4.15.3",
     "marked": "^0.3.6",
     "vue": "^2.3.3"
   },
   "devDependencies": {
     "html-webpack-plugin": "^2.28.0",
-    "node-static": "^0.7.9",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5"
   }
